# dify-in-slack

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  index.py  manifest.dev.yml  manifest.prod.yml  manifest.yml  pyproject.toml  requirements.txt  serverless.yml
.github/workflows/: deploy.yml  serverless-deploy.yaml
app/: Dockerfile  bolt_listeners.py  bot_listeners.py  dify_ops.py  env.py  index.py  markdown_conversion.py  slack_ops.py
