[project]
name = "slack-test-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dify-client>=0.1.10",
    "slack-bolt>=1.21.2",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.7.3",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I"]